--- a/Day 2 HTML/index.css
+++ b/Day 2 HTML/index.css
@@ -182,3 +182,48 @@ table, th, td {
   padding: 10px;
 
 }
+.checkbox input[type=checkbox] +  label {
+  display: block;
+  margin: 0.2em;
+  cursor: pointer;
+  padding: 0.2em;
+}
+
+.checkbox input[type=checkbox] {
+  display: none;
+}
+.checkbox  input[type=checkbox] +  label:before {
+  content: "\2714";
+  border: 0.1em solid #000;
+  border-radius: 0.2em;
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+  padding-left: 0.2em;
+  padding-bottom: 0.3em;
+  margin-right: 0.2em;
+  vertical-align: bottom;
+  color: transparent;
+  transition: .2s;
+}
+
+.checkbox  input[type=checkbox] + label:active:before {
+  transform: scale(0);
+}
+
+.checkbox  input[type=checkbox]:checked + label:before {
+  background-color: MediumSeaGreen;
+  border-color: MediumSeaGreen;
+  color: #fff;
+}
+
+.checkbox  input[type=checkbox]:disabled +  label:before {
+  transform: scale(1);
+  border-color: #aaa;
+}
+
+.checkbox  input[type=checkbox]:checked:disabled +  label:before {
+  transform: scale(1);
+  background-color: #bfb;
+  border-color: #bfb;
+}
