--- a/Capstone  Project/index.css
+++ b/Capstone  Project/index.css
@@ -201,19 +201,99 @@ button {
 }
 
 #first-step {
-  background-color: #568e99;
+  background: hsla(347, 89%, 61%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(347, 89%, 61%, 1) 0%,
+    hsla(242, 42%, 40%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(347, 89%, 61%, 1) 0%,
+    hsla(242, 42%, 40%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(347, 89%, 61%, 1) 0%,
+    hsla(242, 42%, 40%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#F44369", endColorstr="#3E3B92", GradientType=1 );
 }
 
 #second-step {
-  background-color: #919191;
+  background: hsla(40, 94%, 74%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(40, 94%, 74%, 1) 0%,
+    hsla(60, 89%, 72%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(40, 94%, 74%, 1) 0%,
+    hsla(60, 89%, 72%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(40, 94%, 74%, 1) 0%,
+    hsla(60, 89%, 72%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FBD07C", endColorstr="#F7F779", GradientType=1 );
 }
 
 #third-step {
-  background-color: #568e99;
+  background: hsla(235, 100%, 78%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(235, 100%, 78%, 1) 0%,
+    hsla(222, 77%, 33%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(235, 100%, 78%, 1) 0%,
+    hsla(222, 77%, 33%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(235, 100%, 78%, 1) 0%,
+    hsla(222, 77%, 33%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#919BFF", endColorstr="#133A94", GradientType=1 );
 }
 
 #fourth-step {
-  background-color: #919191;
+  background: hsla(252, 40%, 29%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(252, 40%, 29%, 1) 0%,
+    hsla(270, 77%, 71%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(252, 40%, 29%, 1) 0%,
+    hsla(270, 77%, 71%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(252, 40%, 29%, 1) 0%,
+    hsla(270, 77%, 71%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#392D69", endColorstr="#B57BEE", GradientType=1 );
 }
 
 #store-section {
@@ -282,4 +362,153 @@ button {
   text-align: center;
 
   padding: 24px;
+}
+
+/* contact form */
+.container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  padding: 50px;
+  background: hsla(217, 100%, 50%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(217, 100%, 50%, 1) 0%,
+    hsla(186, 100%, 69%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(217, 100%, 50%, 1) 0%,
+    hsla(186, 100%, 69%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(217, 100%, 50%, 1) 0%,
+    hsla(186, 100%, 69%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#0061FF", endColorstr="#60EFFF", GradientType=1 );
+}
+
+.flower-info {
+  width: 40%;
+}
+
+.contact-form {
+  width: 50%;
+}
+
+h2 {
+  font-size: 32px;
+  margin-bottom: 20px;
+}
+
+p {
+  font-size: 18px;
+  line-height: 1.5;
+}
+
+label {
+  font-weight: bold;
+  margin-top: 10px;
+}
+
+input,
+textarea {
+  padding: 10px;
+  margin-top: 5px;
+  margin-bottom: 20px;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  box-sizing: border-box;
+  width: 100%;
+}
+
+button[type="submit"] {
+  background-color: #4caf50;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+button[type="submit"]:hover {
+  background-color: #45a049;
+}
+
+input:focus,
+textarea:focus {
+  outline: none;
+  border-color: #6e90ff;
+}
+/* footer */
+footer {
+  background-color: #f5f5f5;
+  padding: 40px 0;
+}
+.social-icons li {
+  display: inline-block;
+  margin-right: 10px;
+}
+.social-icons li:last-child {
+  margin-right: 0;
+}
+.social-icons a {
+  color: #000;
+  font-size: 24px;
+  transition: color 0.3s ease-in-out;
+}
+.social-icons a:hover {
+  color: #36C5F0;
+}
+/* Video content */
+.video-row {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+  /* margin: 20px 0; */
+  background: hsla(63, 100%, 77%, 1);
+
+  background: linear-gradient(
+    90deg,
+    hsla(63, 100%, 77%, 1) 0%,
+    hsla(331, 74%, 68%, 1) 100%
+  );
+
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(63, 100%, 77%, 1) 0%,
+    hsla(331, 74%, 68%, 1) 100%
+  );
+
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(63, 100%, 77%, 1) 0%,
+    hsla(331, 74%, 68%, 1) 100%
+  );
+
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FAFF89", endColorstr="#EA72AD", GradientType=1 );
+}
+
+.video-item {
+  width: 30%;
+  margin-bottom: 20px;
+}
+
+.video-item video {
+  width: 100%;
+  height: auto;
+}
+
+.video-item figcaption {
+  text-align: center;
+  margin-top: 10px;
+}
+figcaption {
+  font-weight: bold;
 }
