--- a/Capstone  Project/index.css
+++ b/Capstone  Project/index.css
@@ -225,27 +225,27 @@ button {
 }
 
 #second-step {
-  background: hsla(40, 94%, 74%, 1);
+  background: hsla(280, 84%, 41%, 1);
 
   background: linear-gradient(
     90deg,
-    hsla(40, 94%, 74%, 1) 0%,
-    hsla(60, 89%, 72%, 1) 100%
+    hsla(280, 84%, 41%, 1) 0%,
+    hsla(218, 97%, 56%, 1) 100%
   );
 
   background: -moz-linear-gradient(
     90deg,
-    hsla(40, 94%, 74%, 1) 0%,
-    hsla(60, 89%, 72%, 1) 100%
+    hsla(280, 84%, 41%, 1) 0%,
+    hsla(218, 97%, 56%, 1) 100%
   );
 
   background: -webkit-linear-gradient(
     90deg,
-    hsla(40, 94%, 74%, 1) 0%,
-    hsla(60, 89%, 72%, 1) 100%
+    hsla(280, 84%, 41%, 1) 0%,
+    hsla(218, 97%, 56%, 1) 100%
   );
 
-  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#FBD07C", endColorstr="#F7F779", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#8711C1", endColorstr="#2472FC", GradientType=1 );
 }
 
 #third-step {
@@ -447,25 +447,53 @@ textarea:focus {
   border-color: #6e90ff;
 }
 /* footer */
-footer {
-  background-color: #f5f5f5;
-  padding: 40px 0;
+.footer {
+  background-color: #333;
+  color: white;
+  padding: 20px;
+  text-align: center;
 }
-.social-icons li {
-  display: inline-block;
-  margin-right: 10px;
+
+.footer p {
+  margin: 0;
+  font-size: 16px;
 }
-.social-icons li:last-child {
-  margin-right: 0;
+
+.footer a {
+  color: white;
+  text-decoration: underline;
 }
-.social-icons a {
-  color: #000;
-  font-size: 24px;
-  transition: color 0.3s ease-in-out;
+
+.footer-content {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
 }
-.social-icons a:hover {
-  color: #36C5F0;
+
+.footer-section {
+  width: 30%;
+  margin-bottom: 20px;
 }
+
+.footer-section h3 {
+  font-size: 20px;
+  margin-bottom: 10px;
+}
+
+.footer-section ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.footer-section li {
+  margin-bottom: 5px;
+}
+
+.footer-section li:last-child {
+  margin-bottom: 0;
+}
+
 /* Video content */
 .video-row {
   display: flex;
