--- a/Final Project/style.css
+++ b/Final Project/style.css
@@ -259,3 +259,86 @@ footer p {
     font-weight: normal;
     color: var(--secondary-text-color);
 }
+
+
+.container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .left {
+    flex: 1;
+    padding: 2rem;
+    color: #fff;
+  }
+  
+  .right {
+    flex: 1;
+    padding: 2rem;
+    background-color: var(--primary-background-color);
+    color: #eee;
+    border-radius: 0.5rem;
+  }
+  
+  h2 {
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+  
+  .input-group {
+    position: relative;
+    margin-bottom: 1.5rem;
+  }
+  
+  input,
+  textarea {
+    display: block;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    border: 1px solid white;
+    border-radius: 0.5rem;
+    background-color:var(--primary-background-color);
+    color: #eee;
+  }
+  
+  input:focus,
+  textarea:focus {
+    outline: none;
+  }
+  
+  label {
+    position: absolute;
+    top: 0.5rem;
+    left: 1rem;
+    font-size: 1rem;
+    color: #bbb;
+    transition: all 0.3s ease;
+    pointer-events: none;
+  }
+  
+  input:focus ~ label,
+  textarea:focus ~ label,
+  input:not(:placeholder-shown) ~ label,
+  textarea:not(:placeholder-shown) ~ label {
+    top: -1rem;
+    left: 0.5rem;
+    font-size: 0.8rem;
+    color: #fff;
+  }
+  
+  button {
+    display: block;
+    margin: auto;
+    padding: 0.5rem 1rem;
+    border: none;
+    border-radius: 0.5rem;
+    background-color: #eee;
+    color: #333;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: all 0.3s ease;
+  }
+  button:hover {
+    background-color: #ddd;
+    color: #222;
+  }
